--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.5.2",
+    "pg": "^8.11.2",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
